# defer-drop

./: CHANGELOG.md  Cargo.toml  README.md
examples/: demo.rs
src/: lib.rs  once_slot.rs
