[package]
name = "defer-drop"
version = "1.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Defer dropping large types to a background thread"
repository = "https://github.com/Lucretiel/defer-drop"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
once_cell = "1.4.0"
